--- a/sprout/appliances/templates/appliances/my_appliances.html
+++ b/sprout/appliances/templates/appliances/my_appliances.html
@@ -16,7 +16,7 @@
 {% for pool in pools %}
     <div class="panel panel-primary" id="pool-{{ pool.id }}">
         <div class="panel-heading">
-            <strong>Pool #{{pool.id}}, {{ pool.current_count }}/{{ pool.total_count }} appliances - {{ pool.group.id }} {% if pool.version %}({{ pool.version }}){% endif %}</strong>
+            <strong>Pool #{{pool.id}}, {{ pool.current_count }}/{{ pool.total_count }} appliances - {{ pool.group.id }} {% if pool.version %}({{ pool.version }}){% endif %} - {% if pool.preconfigured %}Configured{% else %}Unconfigured{% endif %}</strong>
             {% if show_user == "all" %}
                 <em>Owner: {{ pool.owner.first_name }} {{ pool.owner.last_name }}
                 <a href="{% url 'appliances.views.my_appliances' %}?show={{ pool.owner.username }}" class="btn btn-info btn-xs"><span class="glyphicon glyphicon-hand-right"></span> {{ pool.owner.username }}</a></em>
@@ -134,38 +134,58 @@
     </div>
 {% endfor %}
 <h2>Requesting additional pools</h2>
-<form action="{% url 'appliances.views.request_pool' %}" method="POST">
+<form action="{% url 'appliances.views.request_pool' %}" method="POST" class="form-horizontal">
     {% csrf_token %}
     <div class="form-group">
-      <label for="stream">Select stream:</label>
-      <select class="form-control" id="stream" name="stream">
-        <option value="<None>">Please select ...</option>
-        {% for group in groups %}
-        <option value="{{ group.id }}">{{ group.id }}</option>
-        {% endfor %}
-      </select>
+      <label for="stream" class="col-md-2 control-label">Select stream:</label>
+      <div class="col-md-4">
+          <select class="form-control" id="stream" name="stream">
+            <option value="<None>">Please select ...</option>
+            {% for group in groups %}
+            <option value="{{ group.id }}">{{ group.id }}</option>
+            {% endfor %}
+          </select>
+      </div>
     </div>
     <div class="form-group">
-      <label for="version">Select version (if applicable):</label>
-      <select class="form-control" id="version" name="version">
-        <option value="latest">Latest</option>
-      </select>
+        <label for="preconfigured" class="col-md-2 control-label">Preconfigured?:</label>
+        <div class="col-md-4">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" class="form-control" id="preconfigured" name="preconfigured" value="true" checked>
+              </label>
+            </div>
+        </div>
     </div>
     <div class="form-group">
-      <label for="date">Select build date (if you want):</label>
-      <select class="form-control" id="date" name="date">
-        <option value="latest">Latest</option>
-      </select>
+      <label for="version" class="col-md-2 control-label">Select version (if applicable):</label>
+      <div class="col-md-4">
+          <select class="form-control" id="version" name="version">
+            <option value="latest">Latest</option>
+          </select>
+        </div>
     </div>
     <div class="form-group">
-      <label for="date">Select specific provider (if you know what you do) (remaining provisioning slots:remaining appliance slots):</label>
-      <select class="form-control" id="provider" name="provider">
-        <option value="any">Any provider (recommended option!)</option>
-      </select>
+      <label for="date" class="col-md-2 control-label">Select build date (if you want):</label>
+      <div class="col-md-4">
+          <select class="form-control" id="date" name="date">
+            <option value="latest">Latest</option>
+          </select>
+      </div>
     </div>
     <div class="form-group">
-      <label for="count">Number of appliances wanted:</label>
-      <input type="number" class="form-control" id="count" name="count" min="1" value="1">
+      <label for="provider" class="col-md-2 control-label">Select specific provider (if you know what you do) (remaining provisioning slots:remaining appliance slots):</label>
+      <div class="col-md-4">
+          <select class="form-control" id="provider" name="provider">
+            <option value="any">Any provider (recommended option!)</option>
+          </select>
+        </div>
+    </div>
+    <div class="form-group">
+      <label for="count" class="col-md-2 control-label">Number of appliances wanted:</label>
+      <div class="col-md-4">
+        <input type="number" class="form-control" id="count" name="count" min="1" value="1">
+      </div>
     </div>
     <button class="btn btn-primary btn-lg" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-star-empty"></span> Gimme one!</button>
 </form>
@@ -176,18 +196,21 @@ $(document).ready(function() {
         $.ajax({
                 type: "POST",
                 url: "{% url 'appliances.views.versions_for_group' %}",
-                data: {stream: $('select#stream').val()},
+                data: {stream: $('select#stream').val(), preconfigured: $("#preconfigured").is(":checked")},
                 dataType: 'html'
          }).done(function(data){
             $('select#version').html(data);
             $("select#version").trigger("change");
          });
     });
+    $('#preconfigured').change(function(){
+        $("select#stream").trigger("change");  // a bit stupid but no better idea right now
+    });
     $('select#version').change(function(){
         $.ajax({
                 type: "POST",
                 url: "{% url 'appliances.views.date_for_group_and_version' %}",
-                data: {stream: $('select#stream').val(), version: $('select#version').val()},
+                data: {stream: $('select#stream').val(), version: $('select#version').val(), preconfigured: $("#preconfigured").is(":checked")},
                 dataType: 'html'
          }).done(function(data){
             $('select#date').html(data);
@@ -198,7 +221,7 @@ $(document).ready(function() {
         $.ajax({
                 type: "POST",
                 url: "{% url 'appliances.views.providers_for_date_group_and_version' %}",
-                data: {stream: $('select#stream').val(), version: $('select#version').val(), date: $('select#date').val()},
+                data: {stream: $('select#stream').val(), version: $('select#version').val(), date: $('select#date').val(), preconfigured: $("#preconfigured").is(":checked")},
                 dataType: 'html'
          }).done(function(data){
             $('select#provider').html(data);
